--- a/css/base.css
+++ b/css/base.css
@@ -54,6 +54,7 @@ body {
     top: 0px;
     background: rgba(59, 59, 59, 0.5);
     z-index: 999;
+    filter: drop-shadow(0px 10px 10px rgba(0, 0, 0, 0.4));
 }
 
 .navbar_button {
