--- a/css/base.css
+++ b/css/base.css
@@ -1,3 +1,9 @@
+@font-face {
+    font-family: "cubechaos";
+    src: url("../resources/fonts/HyliaSerifBeta-Regular.otf") format("opentype");
+    font-style: normal;
+}
+
 body {
     margin: 0px;
     position: relative;
@@ -56,6 +62,7 @@ body {
     background: rgba(59, 59, 59, 0.5);
     z-index: 999;
     filter: drop-shadow(0px 15px 10px rgba(0, 0, 0, 0.8));
+    
 }
 
 .navbar_button {
@@ -76,18 +83,30 @@ body {
 
 .banner {
     display: block;
-    height: 300px;
-    background: url("https://static.fore.4pcdn.de/premium/Screenshots/96/dc/92609642-vollbild.jpg");
-    background-position: center;
+    height: 330px;
+    overflow: hidden;
+    margin-top: -30px;
     filter: drop-shadow(0px 15px 10px rgba(0, 0, 0, 0.8));
+}
+
+.banner_img {
+    height: auto;
+    width: 100%;
+    position:absolute;
+    top: -9999px;
+    bottom: -9999px;
+    left: -9999px;
+    right: -9999px;
+    margin: auto;
 }
 
 @media (max-width: 490px) {
     .banner {
         display: block;
-        height: 120px;
-        background: url("https://static.fore.4pcdn.de/premium/Screenshots/96/dc/92609642-vollbild.jpg");
-        background-position: center;
+        height: 230px;
+        overflow: hidden;
+        margin-top: -30px;
+        filter: drop-shadow(0px 15px 10px rgba(0, 0, 0, 0.8));
     }
 }
 
@@ -119,6 +138,43 @@ body {
     position: relative;
     padding-bottom: 56.25%;
 }
+
+.transparent_text_container {
+    position: relative;
+    width: 100%;
+    min-height: 230px;
+    outline-style: solid;
+    outline: white;
+    outline-style: solid;
+    outline-width: 10px;
+    margin-top: 50px;
+    box-shadow: 10px 10px 0px 10px rgba(0, 0, 0, 0.4);
+}
+
+.transparent_text {
+    position: relative;
+    color: white;
+    width: 100%;
+    z-index: 100;
+    font-family: "cubechaos", serif;
+    white-space: pre-wrap;
+    margin-left: 2%;
+    margin-right: 2%;
+    line-height: 22px;
+    width: 96%;
+}
+
+.transparent_text_background {
+    background-color: rgba(0, 0, 0, 0.4);
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    width: 100%;
+    height: 100%;
+    z-index: 99;
+}
+
+
 
 #rp_video {
     position: absolute;
