--- a/css/base.css
+++ b/css/base.css
@@ -92,7 +92,7 @@ body {
     height: 330px;
     overflow: hidden;
     margin-top: -30px;
-    filter: drop-shadow(0px 15px 10px rgba(0, 0, 0, 0.8));
+    filter: drop-shadow(0px 15px 10px rgba(0, 0, 0, 0.4));
 }
 
 .banner_container {
@@ -104,6 +104,19 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     position: absolute;
+}
+
+.banner_container_background_holder {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    position: absolute;
+    background-image: url("../resources/banner/backgrounds/banner_background_0.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    top: 0;
+    left: 0;
 }
 
 .banner_slide {
