--- a/static/css/base.css
+++ b/static/css/base.css
@@ -100,7 +100,7 @@ body {
     width: 100%;
     height: 100%;
     overflow: hidden;
-    background-image: url("../resources/banner/backgrounds/banner_background_0.png");
+    background-image: url("/static/resources/banner/backgrounds/banner_background_0.png");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -112,7 +112,7 @@ body {
     height: 100%;
     overflow: hidden;
     position: absolute;
-    background-image: url("../resources/banner/backgrounds/banner_background_0.png");
+    background-image: url("/static/resources/banner/backgrounds/banner_background_0.png");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
