--- a/static/css/base.css
+++ b/static/css/base.css
@@ -82,6 +82,7 @@ body {
     height: 100%;
     cursor: pointer;
     text-decoration: none;
+    font-family: "cubechaos", serif;
 }
 
 .navbar_button:hover {
@@ -142,6 +143,7 @@ body {
     top: calc(50% - 10px);
     width: 20px;
     height: 20px;
+    
 }
 
 .banner_left_button {
@@ -253,20 +255,80 @@ body {
     max-width: 1000px;
     margin: auto;
     height: 100%;
-    display: grid;
-    grid-template-columns: 20% 20% 20% 20% 20%;
-    grid-template-rows: 100%;
-    grid-column-gap: 20px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-direction: row;
 }
 
-.footer_item {
-    width: 100%;
-    height:  auto;
-    margin-top: auto;
-    margin-bottom: auto;
-    margin-left: auto;
-    margin-right: auto;
+.footer_cube_chaos_logo {
+    width: 55%;
+    margin-top: -11%;
     max-height: 140px;
+}
+
+.footer_cube_chaos_logo_2 {
+    width: 70%;
+    margin-top: 3%;
+    max-height: 50px;
+}
+
+.footer_about_left {
+    height: 60%;
+    color: rgb(130, 130, 130);
+    font-family: "cubechaos", serif;
+    max-width: 40%;
+    font-size: 80%;
+}
+
+.footer_about_right {
+    height: 60%;
+    color: rgb(130, 130, 130);
+    font-family: "cubechaos", serif;
+    width: 40%;
+    max-width: 40%;
+    font-size: 80%;
+    list-style-position: inside;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: stretch;
+}
+
+.footer_legal {
+    margin-right: 2px;
+    width: 50%;
+}
+
+.footer_links {
+    margin-left: 2px;
+    width: 50%;
+}
+
+.footer_logo {
+    width: 20%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.footer h4 {
+    font-size: 100%;
+    border-bottom:rgb(130, 130, 130);
+    border-bottom-style: solid;
+    margin: 0px;
+    margin-bottom: 4px;
+}
+
+.footer p {
+    margin-top: 3px;
+    margin-bottom: 0px;
+}
+
+.footer a {
+    color: rgb(180, 180, 180);
+    text-decoration: none;
 }
 
 #footer_sticky_piston_logo {
@@ -277,6 +339,44 @@ body {
 
 #footer_alien_logo {
     max-width: 130px;
+}
+
+@media (max-width: 900px) {
+    .footer_content {
+        flex-direction: column;
+        width: 70%;
+    }
+
+    .footer_about_left {
+        color: rgb(180, 180, 180);
+        font-family: "cubechaos", serif;
+        max-width: 100%;
+        font-size: 70%;
+        margin-top: 3px;
+        width: 100%;
+    }
+    
+    .footer_about_right {
+        color: rgb(180, 180, 180);
+        font-family: "cubechaos", serif;
+        max-width: 100%;
+        font-size: 70%;
+        width: 100%;
+    }
+
+    .footer {
+        height: 140px;
+    }
+
+    .footer_logo {
+        display: none;
+    }
+}
+
+@media (max-width: 480px) {
+    .footer_content {
+        width: 95%;
+    }
 }
 
 .content_selection_image {
