--- a/static/css/base.css
+++ b/static/css/base.css
@@ -18,16 +18,52 @@ body {
     background-color: #202020;
     overflow: hidden;
     height: 100px;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: center;
 }
 
-#header_logo a {
-    margin-left: 15%;
-    height: 100px;
-    width: 200px;
+#header_content {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+}
+
+#header_logo {
+    width: 25%;
+    border-color: white;
+    border-style: dashed;
     display: flex;
     align-items: center;
-    transition: all .2s ease-in-out;
+    justify-content: left;
 }
+
+#header_logo_a {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#header_space_between {
+    width: 50%;
+    border-color: white;
+    border-style: dashed;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#header_icons {
+    width: 25%;
+    border-color: white;
+    border-style: dashed;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 
 @media (max-width: 490px) {
     #header_logo a {
