--- a/static/css/base.css
+++ b/static/css/base.css
@@ -791,6 +791,7 @@ body {
     flex: 0 0 30%;
     transition: all .2s ease-in-out;
     filter: drop-shadow(7px 7px 0px rgba(0, 0, 0, 1));
+    cursor: pointer;
 }
 
 .addons_card_container img:hover {
@@ -899,14 +900,18 @@ body {
     border-color: white;
     border-width: 4px;
     background-color: rgba(0, 0, 0, 0.3);
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .team_member_text p {
-    margin-top: 2px;
-    margin-bottom: 2px;
-    margin-left: 4px;
-    margin-right: 2px;
     color: white;
+    padding-right: 10px;
+    padding-left: 10px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    margin: 0px;
     font-size: clamp(0px, 1.05vw, 15px);
 }
 
@@ -931,4 +936,17 @@ body {
     .team_member_text p {
         font-size: 16px;
     }
+}
+
+.header_icon_pop {
+    transition: all .1s ease-in-out;
+    cursor: pointer;
+}
+
+.header_icon_pop:hover {
+    scale: 1.35;
+}
+
+.header_a {
+    cursor: default;
 }
