--- a/static/css/base.css
+++ b/static/css/base.css
@@ -371,6 +371,18 @@ body {
         overflow: hidden;
         width: 60%;
     }
+
+    
+}
+
+@media (max-width: 800px) {
+    #banner_slide_3_mr3dalien {
+        width: 200%;
+    }
+
+    #banner_slide_3_buttons {
+        display: none;
+    }
 }
 
 .content {
@@ -794,8 +806,23 @@ body {
     width: 100%;
     transition: all .2s ease-in-out;
 }
+.java_changelog_button_a {
+    width: 100%;
+    height: 80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 4px;
+}
+.java_changelog_button {
+    transition: all .2s ease-in-out;
+}
 
 .bedrock_changelog_button:hover {
+    transform: scale(1.1);
+}
+
+.java_changelog_button:hover {
     transform: scale(1.1);
 }
 
@@ -971,4 +998,25 @@ body {
 
 .header_a {
     cursor: default;
+}
+
+.bugs_buttons {
+    margin-top: 40px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    filter: drop-shadow(10px 10px 0px rgba(0, 0, 0, 0.4));
+}
+.bugs_buttons img {
+    transition: all 0.2s ease-in-out;
+}
+.bugs_buttons img:hover {
+    scale: 1.1;
+}
+
+@media (max-width: 740px) {
+    .bugs_buttons {
+        flex-direction: column;
+    }
 }
