--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1068,3 +1068,41 @@ body {
         margin-right: 0%;
     }
 }
+
+.not_found_div {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    filter: drop-shadow(10px 10px 0px rgba(0, 0, 0, 0.4));
+}
+
+.not_found_div h1 {
+    margin: auto;
+    font-family: "cubechaos", serif;
+    text-align: justify;
+    font-size: 100px;
+    color: white;
+}
+
+@media (max-width: 800px) {
+    .not_found_div {
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        filter: drop-shadow(10px 10px 0px rgba(0, 0, 0, 0.4));
+    }
+    
+    .not_found_div h1 {
+        margin: auto;
+        font-family: "cubechaos", serif;
+        text-align: justify;
+        font-size: 40px;
+        color: white;
+    }
+
+    .not_found_div img {
+        width: 40%;
+    }
+}
